--- a/src/view/primeFaces/forms/BasicsForm.mxml
+++ b/src/view/primeFaces/forms/BasicsForm.mxml
@@ -4,6 +4,7 @@
 									  xmlns:suportclasses="view.suportClasses.*"
 									  skinClass="skins.FormSkin"
 									  creationComplete="onBasicFormCreationComplete(event)"
+									  stateChangeComplete="onBasicFormStateChangeComplete(event)"
 									  currentState="normal">
 	<suportclasses:states>
 		<s:State name="normal"/>
@@ -16,42 +17,35 @@
 	<s:FormItem label="Id" skinClass="skins.FormItemSkin" includeIn="normalWithId">
 		<s:TextInput id="idTextInput" width="100%" skinClass="skins.TextInputSkin"
 					 text="{selectedComponentIdAttributeChaged}" focusOut="commitId()"
-					 height="25" tabIndex="3" keyDown="idInput_keyDownHandler(event)"/>
+					 height="25" tabIndex="1" keyDown="idInput_keyDownHandler(event)"/>
 	</s:FormItem>
 	<s:FormHeading label="Size" skinClass="skins.FormHeadingSkin"/>
 	<s:FormItem label="Width" skinClass="skins.FormItemSkin">
 		<s:TextInput id="widthInput" width="100%"
 					 text="{selectedComponentComputedWidth}" skinClass="skins.TextInputSkin"
 					 keyDown="widthInput_keyDownHandler(event)" height="25"
-					 tabIndex="4"/>
+					 tabIndex="2"/>
 	</s:FormItem>
 	<s:FormItem label="Height" skinClass="skins.FormItemSkin">
 		<s:TextInput id="heightInput" width="100%"
 					 text="{selectedComponentComputedHeight}" skinClass="skins.TextInputSkin"
 					 keyDown="heightInput_keyDownHandler(event)" height="25"
-					 tabIndex="5"/>
+					 tabIndex="3"/>
 	</s:FormItem>
 	<fx:Script><![CDATA[
-		
 		import mx.binding.utils.BindingUtils;
 		import mx.binding.utils.ChangeWatcher;
-		import mx.core.EventPriority;
 		import mx.core.UIComponent;
 		import mx.events.FlexEvent;
-		
+
 		import utils.GenericUtils;
-		
+
 		import view.interfaces.IIdAttribute;
 		import view.interfaces.ISurfaceComponent;
-		
+
 		private var _bindingWidth:ChangeWatcher;
 		private var _bindingHeight:ChangeWatcher;
 		private var _bindingId:ChangeWatcher;
-
-		CONFIG::MOONSHINE
-		{
-			private var tabDictionary:Array = [];
-		}
 
 		[Bindable("change")]
 		private function get selectedComponent():UIComponent
@@ -95,9 +89,7 @@
 
 			return "";
 		}
-		
-		private var eventProgressing:uint = 0;
-		
+
 		private function commitWidth():void
 		{
 			if (this.widthInput.text.indexOf("%") != -1) GenericUtils.applyPercentageWidthHeight(this.selectedItem, this.widthInput.text, this.heightInput.text, true);
@@ -140,7 +132,7 @@
 				commitHeight();
 			}
 		}
-		
+
 		private function idInput_keyDownHandler(event:KeyboardEvent):void
 		{
 			if (event.keyCode === Keyboard.ENTER || event.keyCode == Keyboard.TAB)
@@ -152,15 +144,10 @@
 		private function onBasicFormCreationComplete(event:FlexEvent):void
 		{
 			removeEventListener(FlexEvent.CREATION_COMPLETE, onBasicFormCreationComplete);
-			CONFIG::MOONSHINE
-			{
-				tabDictionary.push(widthInput);
-				tabDictionary.push(heightInput);
 
-				addEventListener(FocusEvent.KEY_FOCUS_CHANGE, onBasicFormKeyFocusChange, false, EventPriority.DEFAULT_HANDLER);
-			}
+			this.refreshChildrenForFocus();
 		}
-		
+
 		private function updateBinding():void
 		{
 			if (this._bindingWidth)
@@ -168,8 +155,8 @@
 				this._bindingWidth.unwatch();
 				this._bindingHeight.unwatch();
 				this._bindingWidth = this._bindingHeight = null;
-				
-				if (currentState == "normalWithId") 
+
+				if (currentState == "normalWithId")
 				{
 					this._bindingId.unwatch();
 					this._bindingId = null;
@@ -183,7 +170,7 @@
 			this._bindingHeight = BindingUtils.bindSetter(onHeightUpdated, selectedItem, "height", false, true);
 			if (currentState == "normalWithId") this._bindingId = BindingUtils.bindSetter(onIdUpdated, selectedItem, "idAttribute", false, true);
 		}
-		
+
 		private function onWidtUpdated(value:Object):void
 		{
 			if (this.widthInput)
@@ -191,7 +178,7 @@
 				this.widthInput.text = !isNaN(this.selectedItem.percentWidth) ? this.selectedItem.percentWidth + "%" : this.selectedItem.width.toString();
 			}
 		}
-		
+
 		private function onHeightUpdated(value:Object):void
 		{
 			if (this.heightInput)
@@ -199,7 +186,7 @@
 				this.heightInput.text = !isNaN(this.selectedItem.percentHeight) ? this.selectedItem.percentHeight + "%" : this.selectedItem.height.toString();
 			}
 		}
-		
+
 		private function onIdUpdated(value:Object):void
 		{
 			if (this.idTextInput)
@@ -208,38 +195,26 @@
 			}
 		}
 
-		CONFIG::MOONSHINE
+		private function onBasicFormStateChangeComplete(event:FlexEvent):void
 		{
-			override protected function isOurFocus(target:DisplayObject):Boolean
+			this.refreshChildrenForFocus();
+		}
+
+		private function refreshChildrenForFocus():void
+		{
+			if (currentState == "normal")
 			{
-				return target == widthInput.textDisplay ||
-						target == heightInput.textDisplay || super.isOurFocus(target);
+				_childrenForFocus = [];
+				_childrenForFocus.push(widthInput.textDisplay);
+				_childrenForFocus.push(heightInput.textDisplay);
 			}
-
-			private function onBasicFormKeyFocusChange(event:FocusEvent):void
+			else if (currentState == "normalWithId")
 			{
-				if (event.isDefaultPrevented())
-					return;
-
-				if (!event.shiftKey && isOurFocus(DisplayObject(event.target)))
-				{
-					event.preventDefault();
-
-					var currentTabIndex:int = event.target.tabIndex;
-
-					if (currentTabIndex > -1)
-					{
-						currentTabIndex += 1;
-						if (tabDictionary.length < currentTabIndex)
-						{
-							currentTabIndex = 1;
-						}
-
-						tabDictionary[currentTabIndex - 1].setFocus();
-					}
-				}
+				_childrenForFocus = [];
+				_childrenForFocus.push(idTextInput.textDisplay);
+				_childrenForFocus.push(widthInput.textDisplay);
+				_childrenForFocus.push(heightInput.textDisplay);
 			}
 		}
-		
-	]]></fx:Script>
+		]]></fx:Script>
 </suportclasses:BasePropertyEditorForm>
