--- a/src/view/primeFaces/forms/renderer/IncludeDropdownListRenderer.mxml
+++ b/src/view/primeFaces/forms/renderer/IncludeDropdownListRenderer.mxml
@@ -11,25 +11,36 @@
 			
 			import utils.MoonshineBridgeUtils;
 			
+			private var isTooltip:Boolean;
+			
 			override public function set data(value:Object):void
 			{
 				if (value)
 				{
 					super.data = value;
-					txtLabel.toolTip = data.resourcePathWithoutRoot;
+					if (isTooltip) txtLabel.toolTip = data.resourcePathWithoutRoot;
 				}
 			}
 			
 			protected function onCreationCompletes(event:FlexEvent):void
 			{
-				txtLabel.addEventListener(ToolTipEvent.TOOL_TIP_CREATE, MoonshineBridgeUtils.moonshineBridge.getCustomTooltipFunction(), false, 0, true);
-				txtLabel.addEventListener(ToolTipEvent.TOOL_TIP_SHOW, MoonshineBridgeUtils.moonshineBridge.getPositionTooltipFunction(), false, 0, true);
+				// lets not add tooltip when list has no horizontal scroll
+				if (this.width > this.owner.width)
+				{
+					txtLabel.addEventListener(ToolTipEvent.TOOL_TIP_CREATE, MoonshineBridgeUtils.moonshineBridge.getCustomTooltipFunction(), false, 0, true);
+					txtLabel.addEventListener(ToolTipEvent.TOOL_TIP_SHOW, MoonshineBridgeUtils.moonshineBridge.getPositionTooltipFunction(), false, 0, true);
+					isTooltip = true;
+				}
 			}
 			
 			protected function onRemoved(event:Event):void
 			{
-				txtLabel.removeEventListener(ToolTipEvent.TOOL_TIP_CREATE, MoonshineBridgeUtils.moonshineBridge.getCustomTooltipFunction());
-				txtLabel.removeEventListener(ToolTipEvent.TOOL_TIP_SHOW, MoonshineBridgeUtils.moonshineBridge.getPositionTooltipFunction());
+				if (isTooltip)
+				{
+					txtLabel.removeEventListener(ToolTipEvent.TOOL_TIP_CREATE, MoonshineBridgeUtils.moonshineBridge.getCustomTooltipFunction());
+					txtLabel.removeEventListener(ToolTipEvent.TOOL_TIP_SHOW, MoonshineBridgeUtils.moonshineBridge.getPositionTooltipFunction());
+					isTooltip = false;
+				}
 			}
 			
 		]]>
