Fixed focus for PrimeFaces InputMask and TabView (reference prominic/Moonshine-IDE#271)

--- a/src/view/primeFaces/forms/MaskedTextInputForm.mxml
+++ b/src/view/primeFaces/forms/MaskedTextInputForm.mxml
@@ -136,6 +136,9 @@
         private function onMaskedTextInputFormCreationComplete(event:FlexEvent):void
         {
             textInput.prompt = "(999) 999-9999";
+
+            _childrenForFocus = [];
+            _childrenForFocus.push(textInput.textDisplay);
         }
         ]]></fx:Script>
 </suportclasses:BasePropertyEditorForm>
